signupmicroservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signup-service
  labels:
    app: signup-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signup-service
  template:
    metadata:
      labels:
        app: signup-service
    spec:
      containers:
        - name: signup-service
          image: shiveshc710/football-manager:signupmicroservice
          ports:
            - containerPort: 8080
