postgres-service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: fm-postgres
#spec:
#  selector:
#    app: fm-postgres
#  ports:
#    - protocol: TCP
#      port: 5432
#      targetPort: 5432
#  type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: fm-postgres
spec:
  selector:
    app: fm-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30000
  type: NodePort
