signupservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signup-service
spec:
  type: LoadBalancer
  selector:
    app: signup-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30007
